# tevianDLL

./: CMakeLists.txt  detectRequest.cpp  loginrequest.cpp  request.cpp  tevianDLL.pro  teviandll.cpp  teviandll.h
